# xuan-brain

./: .eslintrc.cjs  .gitignore  .prettierrc.json  ACCENT_COLOR_CHANGES.md  ACCENT_COLOR_README.md  AGENTS.md  CLAUDE.md  LICENSE  QUICKSTART-TRAY.md  README.md  commit-tray-feature.bat  eslint.config.js  index.html  package-lock.json  package.json  pdf-viewer.html  pnpm-lock.yaml  postcss.config.js  postcss.config.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: nightly.yml  release.yml
.zed/: settings.json
docs/: TRAY-FIX-SUMMARY.md  annotation-save-issue-fix.md  development-plan.md  fix-duplicate-tray-icons.md  gpui-feasibility-analysis.md  introduction.md  mantine-table-analysis.md  paper-demo.json  pdf-blob-implementation.md  pdf-blob-testing.md  pdf-save-implementation.md  release-workflow.md  system-tray-feature.md  system-tray-fix.md  system-tray-implementation.md  system-tray-menu-update.md  system-tray-summary.md  system-tray-testing.md  theme-switcher-feature.md  ultrawork-implementation.md  vue-migration-plan.md
docs/plans/: 2026-03-09-notification-system-design.md  2026-03-09-notification-system-implementation.md
scripts/: sync-version.js
src/: AGENTS.md  App.tsx  App.vue  PDFViewerApp.vue  app.html  index.css  main.ts  main.tsx  pdf-viewer-main.ts  pdf-viewer-main.tsx  pdf-viewer.html  theme.ts  vite-env.d.ts
src-tauri/: .env.example  .gitignore  AGENTS.md  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  pdf-viewer.json
src-tauri/docs/: logging.md
src-tauri/icons/: icon.afdesign  icon.icns
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260122_050159_create_categories.rs  m20260123_161037_create_paper.rs  m20260128_153129_create_paper_category.rs  m20260129_101358_create_paper_detele.rs  m20260131_091618_create_paper_attachment_path.rs
src-tauri/src/: lib.rs  main.rs  schema.surql
src-tauri/src/axum/: error.rs  mod.rs  openapi.rs  routes.rs  server.rs  state.rs
src-tauri/src/axum/handlers/: categories.rs  clips.rs  health.rs  labels.rs  mod.rs  papers.rs
src-tauri/src/command/: category_command.rs  config_command.rs  data_folder_command.rs  label_command.rs  label_test.rs  migration_command.rs  mod.rs  paper_command.rs  search_command.rs
src-tauri/src/command/clip_command/: dtos.rs  mod.rs  mutation.rs  query.rs  utils.rs
src-tauri/src/command/paper/: attachment.rs  dtos.rs  import.rs  mod.rs  mutation.rs  query.rs  utils.rs
src-tauri/src/database/: connection.rs  mod.rs
src-tauri/src/database/entities/: attachment.rs  attachments.rs  author.rs  authors.rs  category.rs  clip_label.rs  clipping.rs  comment.rs  keyword.rs  keywords.rs  label.rs  mod.rs  paper.rs  paper_author.rs  paper_authors.rs  paper_category.rs  paper_keyword.rs  paper_keywords.rs  paper_label.rs  paper_labels.rs  papers.rs  prelude.rs  search_history.rs
src-tauri/src/database/migration/: m20240101_000001_initial.rs  m20240307_000001_split_author_name.rs  m20250307_000002_add_paper_fields.rs  m20250308_000001_add_attachment_count.rs  m20250309_000001_add_fts5_search.rs  m20250310_000001_update_fts5_tokenizer.rs  m20250311_000001_add_search_history.rs  mod.rs
src-tauri/src/llm/: client.rs  mod.rs  prompts.rs
src-tauri/src/models/: attachment.rs  author.rs  category.rs  clipping.rs  comment.rs  keyword.rs  label.rs  mod.rs  paper.rs
src-tauri/src/notification/: emitter.rs  mod.rs  types.rs
src-tauri/src/papers/importer/: arxiv.rs  doi.rs  grobid.rs  html.rs  mod.rs  pubmed.rs  zotero_rdf.rs
src-tauri/src/repository/: attachment_repository.rs  author_repository.rs  category_repository.rs  clipping_repository.rs  keyword_repository.rs  label_repository.rs  mod.rs  paper_repository.rs  search_history_repository.rs  search_repository.rs
src-tauri/src/service/: category_service.rs  data_migration_service.rs  mod.rs  surreal_migration_service.rs
src-tauri/src/surreal/: connection.rs  mod.rs
src-tauri/src/surreal/models/: attachment.rs  author.rs  category.rs  clipping.rs  keyword.rs  label.rs  mod.rs  paper.rs  paper_test.rs  relations.rs
src-tauri/src/sys/: config.rs  consts.rs  dirs.rs  error.rs  log.rs  mod.rs
src/components/: AddCategoryDialog.tsx  AddTagDialog.tsx  CategoryTree.tsx  EditCategoryDialog.tsx  Layout.tsx  Navigation.tsx  StatusBar.tsx  TagsSection.tsx  ThemeSwitcher.tsx
src/composables/: useNotification.ts
src/layouts/: MainLayout.vue
src/lib/: notification-events.ts  notification.ts  tauri.ts  version.ts
src/lib/api/: pdf.ts  (+1 more)
src/pages/: ClipsPage.tsx  ClipsPage.vue  ImportPage.vue  LibraryPage.tsx  PDFViewerPage.tsx  PaperReaderPage.tsx  PaperReaderPage.vue  PapersPage.tsx  PapersPage.vue  SettingsPage.tsx  SettingsPage.vue  SubscriptionPage.tsx  SubscriptionPage.vue  WritingPage.tsx  WritingPage.vue
src/router/: index.ts
src/routes/: +layout.ts  +page.svelte
src/stores/: index.ts  useAppStore.ts  useNotificationStore.ts  useTabsStore.ts
src/types/: notification.ts  tauri.d.ts  vxe-pc-ui.d.ts
(+83 files in other folders)
