[package]
name = "xuan-brain"
version = "0.1.0"
edition = "2021"
description = "A Tauri App"

[workspace]
members = [".", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xuan_brain_lib"

[dependencies]
chrono = "0.4.43"
dirs = "5"
futures = "0.3.31"
migration = { path = "migration" }
quick-xml = { version = "0.39.0", features = ["serialize"] }
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json"] }
sea-orm = { version = "=2.0.0-rc.28", features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "with-chrono",
] }
# anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-tracing = { version = "0.3", features = ["specta"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
