[package]
name = "xuan-brain"
version = "0.1.0"
edition = "2021"
description = "A Tauri App"

[workspace]
members = [".", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xuan_brain_lib"

[dependencies]
axum = "0.8"
base64 = "0.22"
chrono = "0.4.43"
dirs = "5"
futures = "0.3.31"
lopdf = "0.35.0"
migration = { path = "migration" }
quick-xml = { version = "0.39.0", features = ["serialize"] }
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json", "multipart"] }
sea-orm = { version = "=2.0.0-rc.28", features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "with-chrono",
] }
# SurrealDB 3.0 - embedded database with RocksDB persistence
surrealdb = { version = "3", features = ["kv-mem", "kv-rocksdb"] }
# SurrealDB types for SurrealValue derive macro
surrealdb-types = "3"
# anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10.6"
tauri = { version = "2", features = ["image-ico", "image-png", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-mcp-bridge = { version = "0.8", optional = true }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-tracing = { version = "0.3", features = ["specta"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
# OpenAPI / Swagger
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

[features]
mcp-bridge = ["dep:tauri-plugin-mcp-bridge"]
